--- a/index.html
+++ b/index.html
@@ -1,9 +1,10 @@
 <!DOCTYPE>
 <html>
 <head>
-<title>MIDIScript</title>
+  <meta rel="manifest" href="./manifest.json" />
+  <title>MIDIScript</title>
 </head>
 <body>
-<h1>Hello World</h1>
+  <h1>Hello World</h1>
 </body>
 </html>
