Comment out manifest

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE>
 <html>
 <head>
-  <meta rel="manifest" href="./manifest.json" />
+  <!--<meta rel="manifest" href="./manifest.json" />-->
   <title>MIDIScript</title>
 </head>
 <body>
